--- a/CSS/style.css
+++ b/CSS/style.css
@@ -183,6 +183,9 @@ footer ul li:first-of-type {
 }
 .oversigt .a-j {
   font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .oversigt .a-j ul {
   list-style: none;
@@ -202,6 +205,20 @@ footer ul li:first-of-type {
 }
 .oversigt .k-t {
   font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.ES_intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.ES_intro .ES {
+  border-radius: 1.5rem;
+  width: 100%;
+  height: auto;
 }
 
 /*-------------------------------Media querry----------------------------------*/
@@ -279,6 +296,12 @@ footer ul li:first-of-type {
     white-space: nowrap !important;
     border: 0 !important;
   }
+  body main {
+    /*-------------------Stling på specifikke sektioner----------------------*/
+  }
+  body main section {
+    width: 70%;
+  }
   body main .intro {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
@@ -288,7 +311,9 @@ footer ul li:first-of-type {
     width: 20rem;
     margin: auto;
   }
-  body main section {
-    width: 70%;
+  body main .oversigt {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 2rem;
   }
 }/*# sourceMappingURL=style.css.map */
