--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -136,6 +136,9 @@ body{
 
         .a-j{
             font-weight: bold;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
                 ul{
                     list-style: none;
                     font-weight: lighter;
@@ -151,8 +154,24 @@ body{
 
         .k-t{
             font-weight: bold;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
    
+}
+
+.ES_intro{
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+
+        .ES{
+            border-radius: 1.5rem;
+            width: 100%;
+            height: auto;
+        }
+
 }
 
 /*-------------------------------Media querry----------------------------------*/
@@ -247,6 +266,12 @@ body{
 
         /*-------------------Main styling----------------------*/
         main{
+            
+            section{
+                width: 70%;
+            }
+
+            /*-------------------Stling på specifikke sektioner----------------------*/
             .intro{
                 grid-template-columns: 1fr 1fr;
                 grid-template-rows: 1fr;
@@ -259,9 +284,13 @@ body{
                 }
         
             }
-            section{
-                width: 70%;
+
+            .oversigt{
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: 1fr;
+                gap: 2rem;
             }
+            
         }
     }
 }
