rettelser, kommentarer og splittelse af en sektion

--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -38,6 +38,7 @@ $link2: #EAC9FF;
             background-color: $bgcolor;
             color: $CTA;
             transition: ease-in 0.25s;
+            text-decoration: none;
         }
 }
 
