--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -37,14 +37,13 @@ body{
             }
         }
 
-    /*---------------------Main + link------------------*/
+    /*---------------------Section + link------------------*/
         .bg_img{
             position: fixed;
             z-index: -100;
+            object-fit: cover;
         }
         
-    
-
         section{
             @include partial.box;
 
