--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,6 +119,7 @@ footer {
   border: 2px solid rgba(242, 242, 242, 0.5);
   box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
   padding: 0.2rem 2rem;
+  margin-top: 6rem;
 }
 footer ul {
   list-style-type: none;
@@ -127,6 +128,7 @@ footer ul {
   line-height: 2rem;
   padding: 1.5rem 0.5rem 0 0.5rem;
   color: #F2F2F2;
+  padding-bottom: 1rem;
 }
 footer ul li {
   text-align: center;
