--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ body header .mobil {
 }
 body header .mobil img {
   width: 2.2rem;
-  height: auto;
+  height: 2.5rem;
 }
 body .desktop {
   display: none;
