--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -26,7 +26,7 @@ body{
                 
                     img{
                         width: 2.2rem;
-                        height: auto;
+                        height: 2.5rem;
                     }
                     
                 }
