--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -175,6 +175,18 @@ body{
 
 }
 
+/*---------------tips---------------*/
+.lightbulb{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+        img{
+            width: 4rem;
+            height: 4.2rem;
+        }
+}
+
 /*-------------------------------Media querry----------------------------------*/
 @media screen and (min-width:700px) and (max-width:1024px) {
       body{
