--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,6 +44,8 @@ body .desktop {
 .bg_img {
   position: fixed;
   z-index: -100;
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -233,8 +235,8 @@ footer ul li:first-of-type {
   justify-content: space-between;
 }
 .lightbulb img {
-  width: 4rem;
-  height: 4.2rem;
+  width: 3rem;
+  height: 3.2rem;
 }
 
 /*-------------------------------Media querry----------------------------------*/
@@ -331,5 +333,14 @@ footer ul li:first-of-type {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     gap: 2rem;
+  }
+  body main .lightbulb {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  body main .lightbulb img {
+    width: 4rem;
+    height: 4.2rem;
   }
 }/*# sourceMappingURL=style.css.map */
