--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -41,7 +41,9 @@ body{
         .bg_img{
             position: fixed;
             z-index: -100;
-            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            object-fit:cover;
         }
         
         section{
@@ -182,8 +184,8 @@ body{
     justify-content: space-between;
 
         img{
-            width: 4rem;
-            height: 4.2rem;
+            width: 3rem;
+            height: 3.2rem;
         }
 }
 
@@ -304,6 +306,16 @@ body{
                 gap: 2rem;
             }
             
+            .lightbulb{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            
+                    img{
+                        width: 4rem;
+                        height: 4.2rem;
+                    }
+            }
         }
     }
 }
