--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -55,6 +55,19 @@ $link2: #EAC9FF;
     backdrop-filter: blur(5px);
 }
 
+@mixin tip ($width:90%, $height:auto, $margin: 3rem auto, $padding:2rem) {
+    height:$height;
+    width: $width;
+    margin: $margin;
+    padding: $padding;
+    color: $white;
+    border-radius: 3rem;
+    background: rgba($lgreen, 0.70);
+    border: 2px solid rgba($CTA, 0.50);
+    box-shadow: 0px 4px 15px 2px rgba($CTA, 0.50) inset;
+    backdrop-filter: blur(5px);
+}
+
 @mixin heading{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.75rem;
