--- a/CSS/style.css
+++ b/CSS/style.css
@@ -229,12 +229,25 @@ footer ul li:first-of-type {
 }
 
 /*---------------tips---------------*/
-.lightbulb {
+.tip {
+  height: auto;
+  width: 90%;
+  margin: 3rem auto;
+  padding: 2rem;
+  color: #F2F2F2;
+  border-radius: 3rem;
+  background: rgba(50, 88, 88, 0.7);
+  border: 2px solid rgba(255, 165, 75, 0.5);
+  box-shadow: 0px 4px 15px 2px rgba(255, 165, 75, 0.5) inset;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+.tip .lightbulb {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.lightbulb img {
+.tip .lightbulb img {
   width: 3rem;
   height: 3.2rem;
 }
@@ -334,12 +347,15 @@ footer ul li:first-of-type {
     grid-template-rows: 1fr;
     gap: 2rem;
   }
-  body main .lightbulb {
+  body main .tip {
+    width: 70%;
+  }
+  body main .tip .lightbulb {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  body main .lightbulb img {
+  body main .tip .lightbulb img {
     width: 4rem;
     height: 4.2rem;
   }
