--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -74,12 +74,27 @@ $link2: #EAC9FF;
     padding: 1rem 0.5rem 0 0.5rem;
     color: $white;
 }
-@mixin text ($line-height:2rem, $fontsize:1.25rem){
+@mixin text ($line-height:2rem, $fontsize:1.25rem, $padding: 1.5rem 0.5rem 0 0.5rem){
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: $fontsize;
     line-height: $line-height;
-    padding: 1.5rem 0.5rem 0 0.5rem;
+    padding: $padding;
     color: $white;
+}
+
+@mixin nav_txt($fontsize:2rem){
+    font-size: $fontsize;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    
+        &:hover{
+            color: $CTA;
+            transition: ease-in-out 0.3s;
+        }
 }
 
 @mixin link ($line-height:2rem,$fontsize:1.25rem){
