--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,6 +40,50 @@ body .desktop {
   display: none;
 }
 
+/*---------------------Undermenu------------------*/
+.undermenu {
+  height: auto;
+  width: 100%;
+  padding: 1.5rem;
+  color: #F2F2F2;
+  background-color: #325858;
+  border: 2px solid rgba(242, 242, 242, 0.5);
+  box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
+  height: 3rem;
+  padding-top: 0.5rem;
+  position: sticky;
+  top: -5rem;
+  transition: top 0.3s ease;
+}
+.undermenu ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.undermenu ul li a {
+  font-size: 2rem;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.25rem;
+  line-height: 2rem;
+  padding: 1.5rem 0.5rem 0 0.5rem;
+  color: #F2F2F2;
+  font-size: 1.5rem;
+  padding: 0 1rem;
+  margin: 0;
+}
+.undermenu ul li a:hover {
+  color: #FFA54B;
+  transition: ease-in-out 0.3s;
+}
+
 /*---------------------Section + link------------------*/
 .bg_img {
   position: fixed;
