--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -39,33 +39,7 @@ body{
 
     /*---------------------Undermenu------------------*/
 
-  .undermenu{
-        @include partial.nav_footer;
-        height: 3rem;
-        padding-top: 0.5rem;
-        position: sticky;
-        top: -5rem;
-        transition: top 0.3s ease;
-            ul{
-                list-style: none;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-                
-
-                    li{
-                            a{
-                                @include partial.nav_txt;
-                                @include partial.text;
-                                font-size: 1.5rem;
-                                padding: 0 1rem;
-                                margin: 0;
-                            }
-                    }
-            }
-
-    }
+  
 
     /*---------------------Section + link------------------*/
         .bg_img{
@@ -285,13 +259,13 @@ body{
 
                                 input[type='search'] {
                                     @include partial.text;
+                                    font-size: 1rem;
                                     background-color: partial.$white;
                                     color: partial.$bgcolor;
                                     padding: 0.2rem 1rem;
                                     border-radius: 1.5rem;
                                     width: 15rem;
-                                    
-                                    
+                                
                                 }
 
                                     .visually-hidden{
@@ -308,9 +282,30 @@ body{
                                 
                         }
                     }
+                    .menu{
+                            ul{
+                                list-style: none;
+                                display: flex;
+                                flex-direction: row;
+                                align-items: center;                              
+                
+                                    li{
+                                            a{
+                                                @include partial.nav_txt;
+                                                @include partial.text;
+                                                font-size: 1.5rem;
+                                                padding: 0 1rem;
+                                                margin: 0;
+                                            }
+                                    }
+                            }
+                
+                    }
+            
             }
         }
-
+        
+        
         /*-------------------Main styling----------------------*/
         main{
             
