--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -252,6 +252,7 @@ body{
                     
                     div{
                         display: inline-flex;
+                        align-items: center;
                         
 
                             form{
