--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,6 +123,9 @@ footer {
   box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
   padding: 0.2rem 2rem;
   margin-top: 6rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 2rem 5rem 2rem 5rem;
 }
 footer ul {
   list-style-type: none;
@@ -131,10 +134,10 @@ footer ul {
   line-height: 2rem;
   padding: 1.5rem 0.5rem 0 0.5rem;
   color: #F2F2F2;
-  padding-bottom: 1rem;
+  padding: 0;
+  align-self: center;
 }
 footer ul li {
-  text-align: center;
   line-height: 2.5rem;
 }
 footer ul li a {
@@ -150,7 +153,13 @@ footer ul li a:hover {
 }
 footer ul li:first-of-type {
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
+}
+footer img {
+  width: 5rem;
+  height: 5.5rem;
+  align-self: center;
+  justify-self: end;
 }
 
 /*---------------------Styling af specifikke sektioner------------------*/
