--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -80,13 +80,19 @@ body{
         @include partial.nav_footer;
         padding: 0.2rem 2rem;
         margin-top: 6rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 2rem 5rem 2rem 5rem;
+
+
             ul{
                 list-style-type: none;
                 @include partial.text;
-                padding-bottom: 1rem;
+                padding: 0;
+                align-self: center;
+                
 
                 li{
-                    text-align: center;
                     line-height: 2.5rem;
 
                         a{
@@ -95,8 +101,15 @@ body{
                 }
                 li:first-of-type{
                     font-weight: bold;
-                    font-size: 1.5rem;
+                    font-size: 1.25rem;
                 }
+            }
+
+            img{
+                width: 5rem;
+                height: 5.5rem;
+                align-self: center;
+                justify-self: end;
             }
     }
 
