--- a/CSS/style.css
+++ b/CSS/style.css
@@ -121,11 +121,10 @@ footer {
   background-color: #325858;
   border: 2px solid rgba(242, 242, 242, 0.5);
   box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
-  padding: 0.2rem 2rem;
+  padding: 1rem 2rem;
   margin-top: 6rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 2rem 5rem 2rem 5rem;
+  grid-template-columns: 2fr 1fr;
 }
 footer ul {
   list-style-type: none;
@@ -156,10 +155,10 @@ footer ul li:first-of-type {
   font-size: 1.25rem;
 }
 footer img {
-  width: 5rem;
-  height: 5.5rem;
+  width: 3.2rem;
+  height: 3.5rem;
   align-self: center;
-  justify-self: end;
+  justify-self: center;
 }
 
 /*---------------------Styling af specifikke sektioner------------------*/
@@ -406,5 +405,18 @@ footer img {
   body main .tip .lightbulb img {
     width: 4rem;
     height: 4.2rem;
+  }
+  footer {
+    padding: 0.2rem 2rem;
+    margin-top: 6rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 2rem 5rem 2rem 5rem;
+  }
+  footer img {
+    width: 5rem;
+    height: 5.5rem;
+    align-self: center;
+    justify-self: end;
   }
 }/*# sourceMappingURL=style.css.map */
