--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -68,9 +68,9 @@ $link2: #EAC9FF;
     backdrop-filter: blur(5px);
 }
 
-@mixin heading{
+@mixin heading ($fontsize:2rem){
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.75rem;
+    font-size: $fontsize;
     padding: 1rem 0.5rem 0 0.5rem;
     color: $white;
 }
