--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,9 +67,12 @@ section {
 }
 section h1, section h2, section h3 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.75rem;
+  font-size: 2rem;
   padding: 1rem 0.5rem 0 0.5rem;
   color: #F2F2F2;
+}
+section h2, section h3 {
+  font-size: 1.75rem;
 }
 section p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
