--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -56,6 +56,9 @@ body{
                 h1,h2, h3{
                     @include partial.heading;
                 }
+                h2, h3{
+                    font-size: 1.75rem;
+                }
 
                 p{
                     @include partial.text;
