--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -221,9 +221,22 @@ body{
         }
 }
 
+.pelspleje{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+        img{
+            width: 100%;
+            height: auto;
+            border-radius: 1.5rem
+        }
+}
+
 /*---------------tips---------------*/
 .tip{
     @include partial.tip;
+
         .lightbulb{
             display: flex;
             align-items: center;
@@ -234,7 +247,8 @@ body{
                     height: 3.2rem;
                 }  
         }
-    }
+}
+
 
 /*-------------------------------Media querry----------------------------------*/
 @media screen and (min-width:700px) and (max-width:1024px) {
@@ -393,12 +407,10 @@ body{
             
             /*-------------------Engelsk springer spaniel----------------------*/
             .tip{
-                max-width: 60rem;
-            
-                .lightbulb{
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
+                max-width: 60rem;   
+               
+                        
+                .lightbulb{                  
                 
                         img{
                             width: 4rem;
@@ -406,6 +418,7 @@ body{
                         }
                 }
             }
+
         }
     }
 
