--- a/CSS/style.css
+++ b/CSS/style.css
@@ -265,12 +265,7 @@ footer img {
   height: auto;
 }
 
-.pelspleje {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.pelspleje img {
+.sundhed img {
   width: 100%;
   height: auto;
   border-radius: 1.5rem;
