--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -221,11 +221,7 @@ body{
         }
 }
 
-.pelspleje{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.sundhed{
         img{
             width: 100%;
             height: auto;
