--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -211,8 +211,7 @@ body{
 /*---------------------Engelsk springer spaniel------------------*/
 .ES_intro{
     display: flex;
-    flex-direction: column;
-    align-items: center; 
+    flex-direction: column;  
 
         .ES{
             border-radius: 1.5rem;
@@ -309,8 +308,9 @@ body{
                 padding-left: 5rem;
                     
                     a{
-                        @include partial.text;
                         @include partial.nav_txt;
+                        font-family: partial.$logotxt;
+                        font-size: 2.5rem;
                     }
                     img{
                         width: 3rem;
@@ -360,7 +360,7 @@ body{
                                     li{
                                             a{
                                                 @include partial.nav_txt;
-                                                @include partial.text;
+                                                font-family: partial.$txt;
                                                 font-size: 1.5rem;
                                                 padding: 0 1rem;
                                                 margin: 0;
