--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -304,7 +304,7 @@ body{
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                padding-right: 5rem;
+                padding-right: 4rem;
                 padding-left: 5rem;
                     
                     a{
@@ -320,8 +320,11 @@ body{
                     div{
                         display: inline-flex;
                         align-items: center;
-                        
 
+                        
+                        .search{
+                            position: relative;
+                            display: inline-block;
                             form{
                                 margin: auto 1rem;
 
@@ -330,24 +333,34 @@ body{
                                     font-size: 1rem;
                                     background-color: partial.$white;
                                     color: partial.$bgcolor;
-                                    padding: 0.2rem 1rem;
+                                    padding: 0.2rem 1rem 0.2rem 3rem;
                                     border-radius: 1.5rem;
                                     width: 15rem;
                                 
                                 }
 
-                                    .visually-hidden{
-                                        position: absolute !important;
-                                        width: 1px !important;
-                                        height: 1px !important;
-                                        padding: 0 !important;
-                                        margin: -1px !important;
-                                        overflow: hidden !important;
-                                        clip: rect(0,0,0,0) !important;
-                                        white-space: nowrap !important;
-                                        border: 0 !important;
-                                    }
-                                
+                                .visually-hidden{
+                                    position: absolute !important;
+                                    width: 1px !important;
+                                    height: 1px !important;
+                                    padding: 0 !important;
+                                    margin: -1px !important;
+                                    overflow: hidden !important;
+                                    clip: rect(0,0,0,0) !important;
+                                    white-space: nowrap !important;
+                                    border: 0 !important;
+                                }
+                            }
+
+                            img{
+                                position: absolute;
+                                top: 22%;
+                                right: 8px;
+                                transform: translateY(40%);
+                                transform: translateX(-800%);
+                                width: 1.5rem;
+                                height: auto;
+                            }
                         }
                     }
                     .menu{
