--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,6 +27,9 @@
 body {
   background-color: #1F3939;
   /*---------------------Header + nav styling------------------*/
+  /*---------------------Undermenu------------------*/
+  /*---------------------Section + link------------------*/
+  /*---------------------Footer------------------*/
 }
 body header {
   position: sticky;
@@ -55,10 +58,7 @@ body header .mobil img {
 body .desktop {
   display: none;
 }
-
-/*---------------------Undermenu------------------*/
-/*---------------------Section + link------------------*/
-.bg_img {
+body .bg_img {
   position: fixed;
   z-index: -100;
   width: 100%;
@@ -66,8 +66,7 @@ body .desktop {
   -o-object-fit: cover;
      object-fit: cover;
 }
-
-section {
+body section {
   height: auto;
   width: 90%;
   margin: 3rem auto;
@@ -81,26 +80,26 @@ section {
           backdrop-filter: blur(5px);
   /*Dette er CTA på index*/
 }
-section h1, section h2, section h3 {
+body section h1, body section h2, body section h3 {
   font-family: "Inria_Serif";
   font-size: 2rem;
   padding: 1rem 0.5rem 0 0.5rem;
   color: #F2F2F2;
 }
-section h2, section h3 {
+body section h2, body section h3 {
   font-size: 1.75rem;
 }
-section p {
+body section p {
   font-family: "Lexend-Regular";
   font-size: 1.2rem;
   line-height: 2rem;
   padding: 1.5rem 0.5rem 0 0.5rem;
   color: #F2F2F2;
 }
-section p:last-of-type {
+body section p:last-of-type {
   margin-bottom: 3rem;
 }
-section .btn {
+body section .btn {
   text-decoration: none;
   font-family: "Lexend-SemiBold";
   font-size: 1.4rem;
@@ -113,26 +112,24 @@ section .btn {
   padding: 1rem 2rem;
   text-align: center;
 }
-section .btn:hover {
+body section .btn:hover {
   background-color: #1F3939;
   color: #FFA54B;
   transition: ease-in 0.25s;
   text-decoration: none;
 }
-section a {
+body section a {
   font-family: "Lexend-Regular";
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   line-height: 2rem;
   color: #9EF0FF;
   text-decoration: none;
 }
-section a:hover {
+body section a:hover {
   text-decoration: underline;
   color: #EAC9FF;
 }
-
-/*---------------------Footer------------------*/
-footer {
+body footer {
   height: auto;
   width: 100%;
   padding: 1.5rem;
@@ -143,9 +140,13 @@ footer {
   padding: 1rem 2rem;
   margin-top: 6rem;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr 0.5fr;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  row-gap: 1.5rem;
 }
-footer ul {
+body footer ul {
   list-style-type: none;
   font-family: "Lexend-Regular";
   font-size: 1.2rem;
@@ -153,31 +154,40 @@ footer ul {
   padding: 1.5rem 0.5rem 0 0.5rem;
   color: #F2F2F2;
   padding: 0;
-  align-self: center;
 }
-footer ul li {
+body footer ul li {
   line-height: 2.5rem;
 }
-footer ul li a {
+body footer ul li a {
   font-family: "Lexend-Regular";
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   line-height: 2rem;
   color: #9EF0FF;
   text-decoration: none;
 }
-footer ul li a:hover {
+body footer ul li a:hover {
   text-decoration: underline;
   color: #EAC9FF;
 }
-footer ul li:first-of-type {
+body footer ul li:first-of-type {
   font-weight: bold;
   font-size: 1.25rem;
 }
-footer img {
-  width: 3.2rem;
-  height: 3.5rem;
+body footer ul:first-of-type {
+  grid-column: 1;
+  grid-row: 1;
+}
+body footer ul:last-of-type {
+  grid-column: 1;
+  grid-row: 2;
+}
+body footer img {
+  width: 4.2rem;
+  height: 4.5rem;
   align-self: center;
   justify-self: center;
+  grid-column: 2;
+  grid-row: 1/3;
 }
 
 /*---------------------Styling af specifikke sektioner------------------*/
@@ -229,7 +239,7 @@ footer img {
 }
 .oversigt .a-j ul li a {
   font-family: "Lexend-Regular";
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   line-height: 2rem;
   color: #9EF0FF;
   text-decoration: none;
@@ -500,17 +510,31 @@ footer img {
     height: 15rem;
     margin-top: 15rem;
   }
-  footer {
+  body footer {
     padding: 0.2rem 2rem;
     margin-top: 6rem;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     padding: 2rem 5rem 2rem 5rem;
+    align-content: center;
   }
-  footer img {
+  body footer ul:first-of-type {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  body footer ul:last-of-type {
+    grid-column: 2;
+    grid-row: 1;
+    align-content: center;
+    justify-self: center;
+  }
+  body footer img {
     width: 5rem;
     height: 5.5rem;
     align-self: center;
     justify-self: end;
+    grid-column: 3;
+    grid-row: 1;
   }
 }/*# sourceMappingURL=style.css.map */
