--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -35,7 +35,7 @@ body{
             .desktop{
                 display: none;
             }
-        }
+        
 
     /*---------------------Undermenu------------------*/
 
@@ -84,14 +84,17 @@ body{
         padding: 1rem 2rem;
         margin-top: 6rem;
         display: grid;
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 1fr 0.5fr;
+        grid-template-rows: 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        row-gap: 1.5rem;
 
 
             ul{
                 list-style-type: none;
                 @include partial.text;
                 padding: 0;
-                align-self: center;
                 
 
                 li{
@@ -106,16 +109,26 @@ body{
                     font-size: 1.25rem;
                 }
             }
+            ul:first-of-type{
+                grid-column: 1;
+                grid-row: 1;
+            }
+            ul:last-of-type{
+                grid-column: 1;
+                grid-row: 2;
+            }
 
             img{
-                width: 3.2rem;
-                height: 3.5rem;
+                width: 4.2rem;
+                height: 4.5rem;
                 align-self: center;
                 justify-self: center;
+                grid-column: 2;
+                grid-row: 1/3;
             }
     }
 
-
+}
 /*---------------------Styling af specifikke sektioner------------------*/
 /*---------------------Index------------------*/
 .intro{
@@ -463,20 +476,36 @@ body{
                     }
             }
         }
-    }
+        footer{
+            padding: 0.2rem 2rem;
+            margin-top: 6rem;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+            padding: 2rem 5rem 2rem 5rem;
+            align-content: center;
 
-    footer{
-        padding: 0.2rem 2rem;
-        margin-top: 6rem;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        padding: 2rem 5rem 2rem 5rem;
-            img{
-                width: 5rem;
-                height: 5.5rem;
-                align-self: center;
-                justify-self: end;
-            }
+
+                ul:first-of-type{
+                    grid-column: 1;
+                    grid-row: 1;
+                }
+                ul:last-of-type{
+                    grid-column: 2;
+                    grid-row: 1;
+                    align-content: center;
+                    justify-self: center;
+                }
+                img{
+                    width: 5rem;
+                    height: 5.5rem;
+                    align-self: center;
+                    justify-self: end;
+                    grid-column: 3;
+                    grid-row: 1;
+
+                }
+        }
     }
 }
 
