--- a/CSS/style.css
+++ b/CSS/style.css
@@ -140,8 +140,8 @@ body footer {
   padding: 1rem 2rem;
   margin-top: 6rem;
   display: grid;
-  grid-template-columns: 1fr 0.5fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   justify-content: center;
   align-items: center;
   row-gap: 1.5rem;
@@ -154,6 +154,7 @@ body footer ul {
   padding: 1.5rem 0.5rem 0 0.5rem;
   color: #F2F2F2;
   padding: 0;
+  text-align: center;
 }
 body footer ul li {
   line-height: 2.5rem;
@@ -186,8 +187,8 @@ body footer img {
   height: 4.5rem;
   align-self: center;
   justify-self: center;
-  grid-column: 2;
-  grid-row: 1/3;
+  grid-column: 1;
+  grid-row: 3;
 }
 
 /*---------------------Styling af specifikke sektioner------------------*/
@@ -352,6 +353,66 @@ body footer img {
   body .intro .btn {
     width: 100%;
     margin: auto;
+  }
+  body footer {
+    height: auto;
+    width: 100%;
+    padding: 1.5rem;
+    color: #F2F2F2;
+    background-color: #325858;
+    border: 2px solid rgba(242, 242, 242, 0.5);
+    box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
+    padding: 1rem 2rem;
+    margin-top: 6rem;
+    display: grid;
+    grid-template-columns: 1fr 0.5fr;
+    grid-template-rows: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    row-gap: 1.5rem;
+  }
+  body footer ul {
+    list-style-type: none;
+    font-family: "Lexend-Regular";
+    font-size: 1.2rem;
+    line-height: 2rem;
+    padding: 1.5rem 0.5rem 0 0.5rem;
+    color: #F2F2F2;
+    padding: 0;
+  }
+  body footer ul li {
+    line-height: 2.5rem;
+  }
+  body footer ul li a {
+    font-family: "Lexend-Regular";
+    font-size: 1.2rem;
+    line-height: 2rem;
+    color: #9EF0FF;
+    text-decoration: none;
+  }
+  body footer ul li a:hover {
+    text-decoration: underline;
+    color: #EAC9FF;
+  }
+  body footer ul li:first-of-type {
+    font-weight: bold;
+    font-size: 1.25rem;
+  }
+  body footer ul:first-of-type {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  body footer ul:last-of-type {
+    grid-column: 1;
+    grid-row: 2;
+  }
+  body footer img {
+    width: 4.2rem;
+    height: 4.5rem;
+    align-self: center;
+    justify-self: center;
+    grid-column: 2;
+    grid-row: 1/3;
   }
 }
 @media screen and (min-width: 1025px) {
