--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -84,8 +84,8 @@ body{
         padding: 1rem 2rem;
         margin-top: 6rem;
         display: grid;
-        grid-template-columns: 1fr 0.5fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
         justify-content: center;
         align-items: center;
         row-gap: 1.5rem;
@@ -95,6 +95,7 @@ body{
                 list-style-type: none;
                 @include partial.text;
                 padding: 0;
+                text-align: center;
                 
 
                 li{
@@ -123,8 +124,8 @@ body{
                 height: 4.5rem;
                 align-self: center;
                 justify-self: center;
-                grid-column: 2;
-                grid-row: 1/3;
+                grid-column: 1;
+                grid-row: 3;
             }
     }
 
@@ -302,6 +303,54 @@ body{
                     margin: auto;
                 }
 
+        }
+        footer{
+            @include partial.nav_footer;
+            padding: 1rem 2rem;
+            margin-top: 6rem;
+            display: grid;
+            grid-template-columns: 1fr 0.5fr;
+            grid-template-rows: 1fr 1fr;
+            justify-content: center;
+            align-items: center;
+            row-gap: 1.5rem;
+    
+    
+                ul{
+                    list-style-type: none;
+                    @include partial.text;
+                    padding: 0;
+                    
+    
+                    li{
+                        line-height: 2.5rem;
+    
+                            a{
+                                @include partial.link;
+                            }
+                    }
+                    li:first-of-type{
+                        font-weight: bold;
+                        font-size: 1.25rem;
+                    }
+                }
+                ul:first-of-type{
+                    grid-column: 1;
+                    grid-row: 1;
+                }
+                ul:last-of-type{
+                    grid-column: 1;
+                    grid-row: 2;
+                }
+    
+                img{
+                    width: 4.2rem;
+                    height: 4.5rem;
+                    align-self: center;
+                    justify-self: center;
+                    grid-column: 2;
+                    grid-row: 1/3;
+                }
         }
       }    
 }
