--- a/CSS/style.css
+++ b/CSS/style.css
@@ -182,13 +182,15 @@ body footer ul:last-of-type {
   grid-column: 1;
   grid-row: 2;
 }
-body footer img {
-  width: 4.2rem;
-  height: 4.5rem;
+body footer a {
   align-self: center;
   justify-self: center;
   grid-column: 1;
   grid-row: 3;
+}
+body footer a img {
+  width: 4.2rem;
+  height: 4.5rem;
 }
 
 /*---------------------Styling af specifikke sektioner------------------*/
@@ -406,13 +408,15 @@ body footer img {
     grid-column: 1;
     grid-row: 2;
   }
-  body footer img {
-    width: 4.2rem;
-    height: 4.5rem;
+  body footer a {
     align-self: center;
     justify-self: center;
     grid-column: 2;
     grid-row: 1/3;
+  }
+  body footer a img {
+    width: 4.2rem;
+    height: 4.5rem;
   }
 }
 @media screen and (min-width: 1025px) {
@@ -590,12 +594,14 @@ body footer img {
     align-content: center;
     justify-self: center;
   }
-  body footer img {
-    width: 5rem;
-    height: 5.5rem;
+  body footer a {
     align-self: center;
     justify-self: end;
     grid-column: 3;
     grid-row: 1;
+  }
+  body footer a img {
+    width: 5rem;
+    height: 5.5rem;
   }
 }/*# sourceMappingURL=style.css.map */
