--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -118,14 +118,15 @@ body{
                 grid-column: 1;
                 grid-row: 2;
             }
-
-            img{
-                width: 4.2rem;
-                height: 4.5rem;
+            a{
                 align-self: center;
                 justify-self: center;
                 grid-column: 1;
                 grid-row: 3;
+                img{
+                    width: 4.2rem;
+                    height: 4.5rem;
+                }
             }
     }
 
@@ -342,14 +343,16 @@ body{
                     grid-column: 1;
                     grid-row: 2;
                 }
-    
-                img{
-                    width: 4.2rem;
-                    height: 4.5rem;
+                
+                a{
                     align-self: center;
                     justify-self: center;
                     grid-column: 2;
                     grid-row: 1/3;
+                    img{
+                        width: 4.2rem;
+                        height: 4.5rem;
+                    }
                 }
         }
       }    
@@ -545,14 +548,16 @@ body{
                     align-content: center;
                     justify-self: center;
                 }
-                img{
-                    width: 5rem;
-                    height: 5.5rem;
+                a{
                     align-self: center;
                     justify-self: end;
                     grid-column: 3;
                     grid-row: 1;
 
+                    img{
+                        width: 5rem;
+                        height: 5.5rem;
+                    }
                 }
         }
     }
