--- a/CSS/style.css
+++ b/CSS/style.css
@@ -523,6 +523,9 @@ body footer a img {
     color: #FFA54B;
     transition: ease-in-out 0.3s;
   }
+  body header .desktop .menu ul li .aktiv {
+    color: #FFA54B;
+  }
   body main {
     /*-------------------Styling på specifikke sektioner----------------------*/
     /*-------------------index----------------------*/
