--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -224,10 +224,11 @@ body{
 
 }
 /*---------------------Engelsk springer spaniel------------------*/
+
 .ES_intro{
     display: flex;
-    flex-direction: column;  
-
+    flex-direction: column; 
+    
         .ES{
             border-radius: 1.5rem;
             width: 100%;
@@ -444,6 +445,9 @@ body{
                                                 font-size: 1.5rem;
                                                 padding: 0 1rem;
                                                 margin: 0;
+                                            }
+                                            .aktiv{
+                                                color: partial.$CTA;
                                             }
                                     }
                             }
